# Aspen-Renderer

./: .clang-format  .clang-tidy  .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOLD.txt  Class Definitions.md  README.md  aspen_window.cpp  aspen_window.hpp  example.env.cmake  first_app.cpp  first_app.hpp  main.cpp
assets/shaders/: depth_prepass_shader.frag  depth_prepass_shader.vert  material.glsl  mouse_picking_shader.frag  mouse_picking_shader.vert  outline_shader.frag  outline_shader.vert  point_light_shader.frag  point_light_shader.vert  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceShadow.rmiss  scatter.glsl  shadow_shader.frag  shadow_shader.vert  simple_shader.frag  simple_shader.vert  ui_shader.vert
cmake/: Toolchain_clang-mingw.cmake  Toolchain_gcc-mingw.cmake  update_directory.cmake
include/stb_image/: stb_image.h
shaders/: simple_shader.frag  simple_shader.vert
src/: aspen_camera.cpp  aspen_camera.hpp  aspen_device.cpp  aspen_device.hpp  aspen_game_object.hpp  aspen_model.cpp  aspen_model.hpp  aspen_pipeline.cpp  aspen_pipeline.hpp  aspen_renderer.cpp  aspen_renderer.hpp  aspen_swap_chain.cpp  aspen_swap_chain.hpp  aspen_window.cpp  aspen_window.hpp  camera_controller.cpp  camera_controller.hpp  first_app.cpp  first_app.hpp  gravity_app.cpp  pch.h  simple_render_system.cpp  simple_render_system.hpp
src/Aspen/Core/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  gravity_app.cpp  input.cpp  input.hpp  keycodes.hpp  main.cpp  model.cpp  model.hpp  mousecodes.hpp  timer.hpp  uuid.cpp  uuid.hpp  window.cpp  window.hpp
src/Aspen/Events/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
src/Aspen/Math/: math.cpp  math.hpp
src/Aspen/Renderer/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  device_procedures.cpp  device_procedures.hpp  frame_info.hpp  framebuffer.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  tools.cpp  tools.hpp
src/Aspen/Renderer/System/: depth_prepass_render_system.cpp  depth_prepass_render_system.hpp  global_render_system.cpp  global_render_system.hpp  mouse_picking_render_system.cpp  mouse_picking_render_system.hpp  outline_render_system.cpp  outline_render_system.hpp  point_light_render_system.cpp  point_light_render_system.hpp  ray_tracing_render_system.cpp  ray_tracing_render_system.hpp  shadow_render_system.cpp  shadow_render_system.hpp  simple_render_system.cpp  simple_render_system.hpp  ui_render_system.cpp  ui_render_system.hpp
src/Aspen/Scene/: camera_controller.cpp  camera_controller.hpp  components.hpp  entity.cpp  entity.hpp  game_object.hpp  scene.cpp  scene.hpp
src/Aspen/System/: camera_controller_system.cpp  camera_controller_system.hpp  camera_system.cpp  camera_system.hpp
src/Aspen/Utils/: circular_buffer.hpp  simple_render_system.cpp  simple_render_system.hpp  utils.hpp
